# Winfetch

./: README.md  install_winfetch.spec  main.py  pyproject.toml
samples/: logo.html
scripts/: install_winfetch.py
src/winfetch/: cli.py
tests/: test_cli.py  test_installer.py
