[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "winfetch"
version = "1.1"
description = "A small Windows-friendly neofetch-style system info CLI with colored ASCII art imports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
winfetch = "winfetch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
